testsuites/LLT/compiler/Diagnose/lex_test/lex_expected_left_bracket/case5.expect.out
error: expected '{' in unicode escape, found '"'
  ==> case5.cj:15:12:
   | 
15 |     cangjie \u""
   |             ~~^ expected '{'
   |             |
   |             because it is in this Unicode escape
   | 

error: unknown start of token: \
  ==> case5.cj:17:10:
   | 
17 |     cangjie \ucangjie2
   |             ^ unknown start of token: \
   | 

error: unterminated multi-line string
  ==> case5.cj:18:2:
   | 
18 |       """
   |  _____^
19 | | }
   | |__^ unterminated multi-line string
   | 

3 errors generated, 3 errors printed.
